[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Warlock/Warlock.gd" type="Script" id=2]
[ext_resource path="res://HUD/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://AmmoUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://ProgressBars/Skill2CDBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://ProgressBars/BlinkCDBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://ProgressBars/Skill1CDBar.tscn" type="PackedScene" id=7]

[node name="Warlock" instance=ExtResource( 1 )]
modulate = Color( 0.172549, 0, 0.25098, 1 )
script = ExtResource( 2 )

[node name="PowerBar" type="CanvasLayer" parent="." index="9"]

[node name="HealthBar" parent="PowerBar" index="0" instance=ExtResource( 3 )]
margin_left = 89.0443
margin_top = 78.7699
margin_right = 729.044
margin_bottom = 142.77

[node name="Ammo" parent="PowerBar" index="1" instance=ExtResource( 4 )]
margin_left = 277.407
margin_top = 976.062
margin_right = 448.407
margin_bottom = 1039.06

[node name="BlinkCDBar" parent="PowerBar" index="2" instance=ExtResource( 6 )]

[node name="Skill1CDBar" parent="PowerBar" index="3" instance=ExtResource( 7 )]

[node name="Skill2CDBar" parent="PowerBar" index="4" instance=ExtResource( 5 )]
